--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- Create an iframe tag-->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12095.04945450992!2d-73.87001255529823!3d40.72324753145548!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25e394b6cc0b9%3A0xf15c2215b49863c4!2sRego%20Park%2C%20Queens%2C%20NY!5e0!3m2!1sen!2sus!4v1650775419476!5m2!1sen!2sus" width="100%" height="400px" style="border:1;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
   </body>
 </html>
